    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====
    ==> 275 - 11/04/2008 - 1.1.1 release <==
    ==> 274 - 10/04/2008 <==

B <mave> Fixed bug in Random::flatInt() when GSL is not used

    ==> 273 - 10/04/2008 <==

B <mave> Fixed bug in BaseNeuralNet::randomize

    ==> 271 - 10/04/2008 - 1.1.0 release <==

+ <mave> re-changed BaseNeuralNet::find methods, they accept const pointers

    ==> 270 - 26/03/2008 <==

+ <mave> added a method for getting the hidden clusters
+ <mave> speedup BaseNeuralNet::getByName for big networks
+ <mave> added NNFW_VERSION macro
+ <mave> added SimpleTimer class
+ <mave> added erase method to VectorData
+ <mave> added method for calculating MSE and RMSD to LearningAlgorithm
C <mave> changed LearningAlgorithm interface for dealing with Pattern and PatternSet
+ <mave> added Pattern and PatternSet classes for an easy setup of Learning/Test sets
+ <mave> added BaseNeuralNet::byName template method for an easy retreving of
	Clusters and Linkers added to BaseNeuralNet objects

    ==> 267 - 21/03/2008 <==

C <mave> updated Factory with new output functions
+ <mave> added LinearFunction y=m*x+b
C <mave> Rename LinearFunction to RampFunction
+ <mave> added WinnerTakeAll output function
+ <mave> added max/minIndex and max/minValue to RealVec
+ <mave> added PseudoGauss output function
+ <mave> added Triangle output function
+ <mave> added Sawtooth output function
+ <mave> added Periodic Output functions
+ <mave> added min and max function to types.h
C <mave> more comments on BackPropagationAlgo::getError

    ==> 265 - 10/03/2008 <==

+ <mave> added a parameter on saveXML for choosing the precision for real data