@@ -30,6 +30,8 @@
 
 #ifndef WIN32
 	#include <sys/time.h>
+#else
+	#include <windows.h>
 #endif
 
 namespace nnfw {
